08/11 F Fixed if MySQL returns error 1226, we exit out.           [ #00]
08/07 F Fixed handling of uptime reporting from Sentinel services [ #00]
08/06 F Fixed EXCLUDE ADD not checking the nick lenghts.          [ #00]
08/05 F Fixed maxvalues setting on clean installs.                [#122]

Provided by Hal9000 <hal9000@pimpmylinux.org>
01/11 F Fixed wrong handling of chan modes in p10 burst           [ #00]
01/11 A Improved P10 hidden host support                          [ #00]
01/11 F Improved nefarious nick parser                            [ #00]
01/11 F Send ip instead of host to GeoIP for improved performance [ #00]
01/10 F Fixed kicked users not being removed from count and ison  [#371]
01/08 F Fixed except support in P10 burst function                [ #00]
01/08 F Fixed channel bans not parsed correctly on P10 burst      [ #00]
01/08 F Fixed version replies not handled correctly in nefarious  [ #00]
01/06 U Updated GeoIP.dat                                         [ #00]
12/20 F Fixed Denora crashing on certain user quits/parts         [#363]
12/19 A Added vhost support to Nefarious                          [#346]
12/19 F Fixed many P10-related bugs, especially on Nefarious      [#348]
12/19 F Fixed P10 nicks getting truncated in sql_do_addusers      [#364]
12/15 F SWHOIS is now being reset on reconnect                    [#365]
12/07 A ADMIN ADD|DEL|SETPASS for config file admins only         [ #00]
12/06 A Added ADMIN LIST|SHOW|SETPASS commands                    [ #00]
12/06 A Added support for admin users stored into SQL             [ #00]
12/04 F Cleaned up user/chan modes in unreal32 module and sql     [ #00]
12/03 F Fixed topic not being set on P10 ircds                    [ #00]
12/03 F Fixed user/chan modes in P10 protocol modules and sql     [ #00]
12/03 A Reorganized, cleaned up and fixed sql files               [ #00]
11/30 F More fixes to the Charybdis SQL database file             [ #00]